Added simple html markup

--- a/index.html
+++ b/index.html
@@ -1,28 +1,28 @@
-Header with nav to portfolio 
+<Header> with nav to portfolio 
 
-(headshot w/ social media links?)
+(headshot w/ social media links?) img / svg
 
-Hello, welcome to my page. I'm a college student learning computer software engineering. When i'm not in class I focus on studying, spending time with my dog, and playing video games. 
+<p> Hello, welcome to my page. I'm a college student learning computer software engineering. When i'm not in class I focus on studying, spending time with my dog, and playing video games. 
 
-Project section introduction w/ link to github
+<p> Project section introduction w/ link to github
 
-Grid of screenshots with short descriptions.
+<grid> Grid of screenshots with short descriptions.
 
-DOM ADVENTURE GAME
+h1 DOM ADVENTURE GAME
 
-This is what the final result of my "DOM Adventure" Looks like. One of the more challenging projects so far. 
+<p> This is what the final result of my "DOM Adventure" Looks like. One of the more challenging projects so far. 
 
-HTML/CSS RESUME
+h1 HTML/CSS RESUME
 
-This is my resume page which was our first major HTML/CSS project. 
+<p> This is my resume page which was our first major HTML/CSS project. 
 
-TIC-TAC-TOE
+h1 TIC-TAC-TOE
 
-Tic-Tac-Toe was our first major group project. Creating something this simple was suprisingly very tough.
+<p> Tic-Tac-Toe was our first major group project. Creating something this simple was suprisingly very tough.
 
-LEARNGITBRANCHING
+h1 LEARNGITBRANCHING
 
-This wasnt a project, but definetly an accomplishment to be proud of. Git is really confusing to learn and use.
+<p> This wasnt a project, but definetly an accomplishment to be proud of. Git is really confusing to learn and use.
 
 
 
