--- a/index.html
+++ b/index.html
@@ -1,31 +1,54 @@
-<Header> with nav to portfolio 
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <title>Dillon Sesenseig Portfolio</title>
+  </head>
+  <body>
+    <div class = 'zero'> 
+<div id='sin'>
+  Resume   
+  </div>
+ </div>
+ <div class = 'one'>
+   <button>Resume</button>
+(headshot w/ social media links?)
+    </div>
 
-(headshot w/ social media links?) img / svg
+<br><br>
+<p>Hello, welcome to my page. I'm a college student learning computer software engineering. aen i'm not in class I focus on studying, spending time with my dog, and playing video games.</p>
+<br><br>
+<p>Project section introduction w/ link to github</p>
 
-<p> Hello, welcome to my page. I'm a college student learning computer software engineering. When i'm not in class I focus on studying, spending time with my dog, and playing video games. 
+<h1>DOM ADVENTURE GAME</h1>
+<img src="file:///Users/drsensenig191/Desktop/Screen%20Shot%202020-11-26%20at%206.24.26%20PM.png" alt="dom game screencap">
+<p>This is what the final result of my "DOM Adventure" Looks like. One of the more challenging projects so far.</p> 
+<br><br>
 
-<p> Project section introduction w/ link to github
+<h1>HTML/CSS RESUME</h1>
+<img src="file:///Users/drsensenig191/Desktop/Screen%20Shot%202020-11-26%20at%206.21.35%20PM.png" alt="Resume page">
+<br><br>
+This is my resume page which was our first major HTML/CSS project. 
+<br><br>
 
-<grid> Grid of screenshots with short descriptions.
-
-h1 DOM ADVENTURE GAME
-
-<p> This is what the final result of my "DOM Adventure" Looks like. One of the more challenging projects so far. 
-
-h1 HTML/CSS RESUME
-
-<p> This is my resume page which was our first major HTML/CSS project. 
-
-h1 TIC-TAC-TOE
-
-<p> Tic-Tac-Toe was our first major group project. Creating something this simple was suprisingly very tough.
-
-h1 LEARNGITBRANCHING
-
-<p> This wasnt a project, but definetly an accomplishment to be proud of. Git is really confusing to learn and use.
+<h1>TIC-TAC-TOE</h1>
+<img src="file:///var/folders/h0/8cm0zm3n5hncb1yb1wk_xvyr0000gq/T/TemporaryItems/(A%20Document%20Being%20Saved%20By%20screencaptureui%202)/Screen%20Shot%202020-11-26%20at%206.17.25%20PM.png" alt="tic-tac-toe screencap">
+<p>Tic-Tac-Toe was our first major group project. Creating something this simple was suprisingly very tough.</p>
+<br><br>
 
 
 
+<h1>LEARN GIT BRANCHING</h1>
+<img src="file:///Users/drsensenig191/Desktop/Screen%20Shot%202020-11-26%20at%206.20.40%20PM.png" alt="Gitbranching">
+<p>This wasnt a project, but definetly an accomplishment to be proud of. Git is really confusing to learn and use.</p>
+
+<br><br>
 (all desc. == thin font under screenshot) 
- 
-Footer with contact info
+<div class='foot'>
+  Footer with contact info
+  </div>
+  </body>
+</html>
+
+
