--- a/index.html
+++ b/index.html
@@ -3,50 +3,57 @@
   <head>
     <meta charset="utf-8">
     <link href="style.css" rel="stylesheet" type="text/css"/>
-    <title>Dillon Sesenseig Portfolio</title>
+    <title>Dillon Sensenig's Portfolio</title>
   </head>
+
   <body>
     <div class = 'zero'> 
-<div id='sin'>
-  Resume   
-  </div>
+      <h1>Dillon Sensenig</h1>
  </div>
+
  <div class = 'one'>
-   <button>Resume</button>
-(headshot w/ social media links?)
-    </div>
-
 <br><br>
+<div id = 'pfp'>
+  <br><br>
+<img src = "https://via.placeholder.com/150C/O https://placeholder.com/" class = 'pf'/>
 <p>Hello, welcome to my page. I'm a college student learning computer software engineering. aen i'm not in class I focus on studying, spending time with my dog, and playing video games.</p>
-<br><br>
-<p>Project section introduction w/ link to github</p>
-
-<h1>DOM ADVENTURE GAME</h1>
-<img src="file:///Users/drsensenig191/Desktop/Screen%20Shot%202020-11-26%20at%206.24.26%20PM.png" alt="dom game screencap">
-<p>This is what the final result of my "DOM Adventure" Looks like. One of the more challenging projects so far.</p> 
-<br><br>
-
-<h1>HTML/CSS RESUME</h1>
-<img src="file:///Users/drsensenig191/Desktop/Screen%20Shot%202020-11-26%20at%206.21.35%20PM.png" alt="Resume page">
-<br><br>
-This is my resume page which was our first major HTML/CSS project. 
-<br><br>
-
-<h1>TIC-TAC-TOE</h1>
-<img src="file:///var/folders/h0/8cm0zm3n5hncb1yb1wk_xvyr0000gq/T/TemporaryItems/(A%20Document%20Being%20Saved%20By%20screencaptureui%202)/Screen%20Shot%202020-11-26%20at%206.17.25%20PM.png" alt="tic-tac-toe screencap">
-<p>Tic-Tac-Toe was our first major group project. Creating something this simple was suprisingly very tough.</p>
-<br><br>
+ </div>
+</div>
 
 
+<a href="LandingPageURL"><img sr="ImageURL"></a>
 
-<h1>LEARN GIT BRANCHING</h1>
-<img src="file:///Users/drsensenig191/Desktop/Screen%20Shot%202020-11-26%20at%206.20.40%20PM.png" alt="Gitbranching">
+
+<div id = 'two'>
+<div class="eins">
+  <h5>LEARN GIT BRANCHING</h5> 
+   <a href="link"><img src="https://via.placeholder.com/150
+C/O https://placeholder.com/" style="width:100%"></a>
 <p>This wasnt a project, but definetly an accomplishment to be proud of. Git is really confusing to learn and use.</p>
-
-<br><br>
-(all desc. == thin font under screenshot) 
+  </div>
+  <div class="eins">
+    <h5>TIC-TAC-TOE</h5> 
+    <a href="link"><img src="https://via.placeholder.com/150
+C/O https://placeholder.com/" style="width:100%"></a>
+<p>Tic-Tac-Toe was our first major group project. Creating something this simple was suprisingly very tough.</p>
+  </div>
+  <div class="eins">
+<h5>HTML/CSS RESUME</h5> 
+    <a href="link"><img src="https://via.placeholder.com/150
+C/O https://placeholder.com/" style="width:100%"></a>
+<p>This is my resume page which was our first major HTML/CSS project.</p> 
+  </div>
+  <div class="eins">
+ <h5>DOM ADVENTURE GAME</h5>   
+    <a href="link"><img src="https://via.placeholder.com/150
+C/O https://placeholder.com/" style="width:100%"></a>
+<p>This is what the final result of my "DOM Adventure" Looks like. One of the more challenging projects so far.</p>
+  </div>
+</div>
+<br>
 <div class='foot'>
-  Footer with contact info
+  <a href="Contact Me">Contact Me</a>
+  <a href="https://github.com/DillonSensenig/DillonSensenig.github.io">GitHub Repository</a>
   </div>
   </body>
 </html>
