+ Resume page html

--- a/resume.html
+++ b/resume.html
@@ -1,8 +1,88 @@
-Header                  Home Button
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Dillon Sensenig's Resume</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+  <h1 id="headerOne">Dillon R. Sensenig</h1>
+  <div class="center">11 Carriage Lane ♢ Ephrata Pa 17522 ♢ 717-475-4140
+    dillonsensenig@outlook.com</div>
 
-Resume Centered on page.
-<insert resume html here>
+<h2 class="edu">Education</h2>
+
+<div class="edu2">
+  <p>803 Oak Boulevard | Ephrata, PA 17522</p>
+  <p>Ephrata Senior High School Graduate Class of 2018 </p>
+  <p>High School Diploma </p>
+  </div>
+
+<h2 class="exp">Experience</h2>
+
+<p class="exp1">March 2016-Jan 2017- Freezer Associate, Sharp Shopper --- Ephrata, Pennsylvania</p>
+
+ <p class="ital">Job Responsibilities:</p> 
+   
+   <ul class="exp1">
+     <li>Retrieving shopping carts from parking lot or street.</li>
+     <li>Taking out all trash bags from warehouse.</li> 
+     <li>Sweeping, mopping, dusting break room.</li> 
+     <li>Stocking freezers display, reorganizing walk-in freezer when truck arrives.</li> 
+     <li>Bagging groceries.</li>
+   </ul>
+   
 
 
-Contact Info
-Footer
+<p class="exp1">August 2017 to June 2018- Dairy Associate, Giant --- Ephrata, Pennsylvania</p>
+
+ <p class="ital">Job Responsibilities:</p>
+
+   <ul class="exp1">
+  <li>Responsible for handling all the dairy products</li>
+    <li>Stock shelves to make sure the products are always fresh</li>
+         <li>Help customers find what they may be looking for in the store</li>
+   </ul>
+   
+
+
+
+<p class="exp1">June 2020 to Present - Door Dash Dasher</p>
+
+<p class="ital">Job Responsibilites:</p>
+
+   <ul class="exp1">
+    <li>Responsible for customers orders and deliveries.</li>
+      <li>Picking up orders from resturaunts and delivering to customer location.</li>
+   </ul> 
+
+
+   
+
+<h4>About Me</h4>
+
+  <div class="slide">
+  
+  <img src="http://3.bp.blogspot.com/-gLUDwCLXT6c/Vf0sGSQ0p4I/AAAAAAAACNA/HfnwChXSFp8/s1600/Front.jpg" alt="Awful Mix" />
+
+  <img src="https://images.search.yahoo.com/images/view;_ylt=AwrExl_0indfbEgAjymJzbkF;_ylu=c2VjA3NyBHNsawNpbWcEb2lkAzA2MGI1ZjBkZWFhYzU0OTU5YzNlNTZjMWQ1NjJiNzUzBGdwb3MDMgRpdANiaW5n?back=https%3A%2F%2Fimages.search.yahoo.com%2Fsearch%2Fimages%3Fp%3Doverwatch%26imgl%3Dpd%26fr%3Dmcafee%26fr2%3Dp%253As%252Cv%253Ai%26tab%3Dorganic%26ri%3D2&w=551&h=310&imgurl=c4.wallpaperflare.com%2Fwallpaper%2F337%2F19%2F711%2Foverwatch-video-games-genji-overwatch-digital-art-wallpaper-thumb.jpg&rurl=https%3A%2F%2Fwww.wallpaperflare.com%2Fmachine-neon-ornamented-overwatch-rakan-khamash-zenyatta-overwatch-wallpaper-ucwza&size=61.1KB&p=overwatch&oid=060b5f0deaac54959c3e56c1d562b753&fr2=p%3As%2Cv%3Ai&fr=mcafee&tt=HD+wallpaper%3A+Machine%2C+neon%2C+Ornamented%2C+Overwatch%2C+Rakan+...&b=0&ni=108&no=2&ts=&imgl=pd&tab=organic&sigr=agziVu90QTQg&sigb=jlYr6RwxQL3u&sigi=0HxvzoYnVuLZ&sigt=QME43OTau2M.&.crumb=7InrRMM34yw&fr=mcafee&fr2=p%3As%2Cv%3Ai" alt="Overwatch" />
+
+  <img src="https://get.pxhere.com/photo/wood-sport-field-recreation-stadium-outdoors-tennis-net-court-closeups-flooring-1284570.jpg" alt="Pickle Ball" />
+
+  <img src="https://www.azquotes.com/public/pictures/authors/66/21/662185f859fefae7c12eee2eb451c051/5477094a92124_thaddeus_stevens.jpg" alt="Scary Man" />
+</div>
+<div id="abt">
+  I'm a 20 year-old college student attending
+    Thaddeus Steven College of Technology.<sup><a href = 'https://stevenscollege.edu'>[1]</a></sup> I enjoy spending time on my PC. Whether it's watching youtube tutorial videos or gaming. I enjoy spending time with my family, riding bike, playing pickle ball or VR. Some music I enjoy listening to are lofi mixes, Juice Wrld and The Lumineers on YouTube.
+     </div>
+
+
+
+
+
+
+  </body>
+</html>
+
+	
